// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parsing patterns > parsing complex constructor pattern 1`] = `
ConstructorPatternNode {
  "constructorName": "Some",
  "elements": [
    VariablePatternNode {
      "variable": "x",
    },
    VariablePatternNode {
      "variable": "y",
    },
    VariablePatternNode {
      "variable": "z",
    },
  ],
}
`;

exports[`parsing patterns > parsing complex or pattern 1`] = `
OrPatternNode {
  "patterns": [
    VariablePatternNode {
      "variable": "x",
    },
    VariablePatternNode {
      "variable": "y",
    },
    VariablePatternNode {
      "variable": "z",
    },
  ],
}
`;

exports[`parsing patterns > parsing set pattern 1`] = `
SetPatternNode {
  "variable": "x",
}
`;

exports[`parsing patterns > parsing simple constructor pattern 1`] = `
ConstructorPatternNode {
  "constructorName": "None",
  "elements": [],
}
`;

exports[`parsing patterns > parsing simple or pattern 1`] = `
OrPatternNode {
  "patterns": [
    VariablePatternNode {
      "variable": "x",
    },
    VariablePatternNode {
      "variable": "y",
    },
  ],
}
`;

exports[`parsing patterns > parsing structure pattern 1`] = `
StructurePatternNode {
  "fields": [
    StructurePatternField {
      "name": "x",
      "value": VariablePatternNode {
        "variable": "y",
      },
    },
  ],
  "name": "Foo",
}
`;

exports[`parsing patterns > parsing variable pattern 1`] = `
VariablePatternNode {
  "variable": "x",
}
`;

exports[`parsing patterns > parsing wildcard pattern 1`] = `WildcardPatternNode {}`;
